Inner page redirects

--- a/inner.html
+++ b/inner.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <h1>Enframed inner frame</h1>
+        <script>
+            location.href = "otherpage.html";
+        </script>
     </body>
 </html>
