--- a/inner.html
+++ b/inner.html
@@ -6,8 +6,13 @@
     </head>
     <body>
         <h1>Enframed inner frame</h1>
+        <button class="scripted-button">Active click</button>
+        <a target="_top" href="otherpage.html">Go via link</a>
         <script>
             location.href = "otherpage.html";
+            document.querySelector('.scripted-button').addEventListener('click', () => {
+                location.href = "otherpage.html?method=buttonclick";
+            });
         </script>
     </body>
 </html>
