--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <body>
         <h1>Enframed - testing iFrame Rights</h1>
         <p>This is the outer frame</p>
-        <iframe src="inner.html" sandbox="allow-top-navigation-by-user-activation"></iframe>
+        <iframe src="inner.html" sandbox="allow-top-navigation-by-user-activation allow-scripts"></iframe>
     </body>
 </html>
