--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
         <p>This is the outer frame</p>
         <script>
             let locationBefore = window.location;
-            window.location = {
-                get href() {
+            Object.defineProperty(window.location, "href", {
+                get: function () {
                     return locationBefore.href;
                 },
-                set href(newVal) {
+                set: function (newVal) {
                     console.log(newVal);
                 }
-            };
-
+            });
         </script>
         <iframe src="inner.html" sandbox="allow-top-navigation-by-user-activation allow-scripts"></iframe>
     </body>
